# nhocr-0.21-a

./: CHANGES  LICENSE  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.in
autom4te.cache/: output.0  requests  traces.0  traces.1
dic/: Makefile  Makefile.in  cctable-etl9b1
include/: Makefile  Makefile.am  Makefile.in
libnhocr/: Makefile  Makefile.am  Makefile.in  codelist.cpp  codelist.h  dicfile.cpp  nhocr.h  nhrec.cpp  ocrbase.cpp  ocrbase.h  segchar_adhoc.cpp  segchar_adhoc.h
libnhocr/.deps/: codelist.Po  dicfile.Po  discrim.Po  feature_PLOVE.Po  nhrec.Po  ocrbase.Po  otsubin.Po  segchar_adhoc.Po
makechar/: Makefile  Makefile.am  Makefile.in  makechar.cpp
makechar/.deps/: makechar.Po
makedic/: Makefile  Makefile.am  Makefile.in
makedic/.deps/: makedic.Po
makevec/: Makefile  Makefile.am  Makefile.in
makevec/.deps/: makevec.Po
nhocr/: Makefile  Makefile.am  Makefile.in  nhocr.cpp
nhocr/.deps/: nhocr.Po  segline.Po
test/: big-test-dist.sub  big-test.sh  big-test.txt  cat-1.pgm  output  run-test  small-test.txt  text-1-small.pgm  text-1.pgm
test/fonts/kiloji/: Collecting.txt
