dnl Process this file with autoconf to produce a configure script
AC_PREREQ(2.53)
AC_INIT(NHocr, 0.20, http://www.imglab.org/)

AC_PREFIX_DEFAULT(/opt/nhocr)

AM_INIT_AUTOMAKE([foreign])

O2DIR=$HOME/O2
LIBGRAMDCLIENTDIR=/usr

test "x$CFLAGS" = "x" && CFLAGS="-O3 --unroll-loops"
test "x$CXXFLAGS" = "x" && CXXFLAGS="-O3 --unroll-loops"

AC_ARG_WITH(O2tools,
	[AS_HELP_STRING([--with-O2tools=PATH], [Use O2-tools in PATH])],
	[ if test "x$withval" = "xno" ; then
		AC_MSG_ERROR([*** O2-tools is required ***])
	  elif test "x$withval" != "xyes" ; then
		if test -d "$withval/lib" ; then
			O2TOOLS_LDFLAGS="-L$withval/lib ${LDFLAGS}"
		fi
		if test -d "$withval/include" ; then
			O2TOOLS_CPPFLAGS="-I$withval/include ${CPPFLAGS}"
		fi
	  fi ]
)

AC_ARG_ENABLE([libgramd-client],
	AS_HELP_STRING([--enable-libgramd-client], [Build with libgramd-client library (required for language post-processing)]), \
	[AC_DEFINE(HAVE_LIBGRAMDCLIENT)
	 LIBGRAMDCLIENT_LDADD="-lgramdclient"
	])

AC_ARG_WITH(libgramd-client,
	[AS_HELP_STRING([--with-libgramd-client=PATH], [Use libgramd-client in PATH])],
	[AC_DEFINE(HAVE_LIBGRAMDCLIENT)
	 LIBGRAMDCLIENT_LDADD="-lgramdclient"
	 LIBGRAMDCLIENT_LDFLAGS="-L$withval/lib"
	 LIBGRAMDCLIENT_CPPFLAGS="-I$withval/include"],
	["Building with libgramd-client"],
	[]
)

AC_SUBST([LIBGRAMDCLIENT_LDADD])

# set default paths
test "x$O2TOOLS_CPPFLAGS" = "x" && O2TOOLS_FLAGS="-I${O2DIR}/include"
test "x$O2TOOLS_LDFLAGS" = "x" && O2TOOLS_LDFLAGS="-L${O2DIR}/lib"

test "x$LIBGRAMDCLIENT_CPPFLAGS" = "x" && LIBGRAMDCLIENT_FLAGS="-I${LIBGRAMDCLIENTDIR}/include"
test "x$LIBGRAMDCLIENT_LDFLAGS" = "x" && LIBGRAMDCLIENT_LDFLAGS="-L${LIBGRAMDCLIENTDIR}/lib"

CPPFLAGS="$O2TOOLS_CPPFLAGS $LIBGRAMDCLIENT_CPPFLAGS -DDICDIR=\\\"$datadir\\\" $CPPFLAGS"
LDFLAGS="$O2TOOLS_LDFLAGS $LIBGRAMDCLIENT_LDFLAGS $LDFLAGS"

AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB

AC_PATH_XTRA

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([nhocr/Makefile])
AC_CONFIG_FILES([include/Makefile])
AC_CONFIG_FILES([libnhocr/Makefile])
AC_CONFIG_FILES([dic/Makefile])
AC_CONFIG_FILES([makechar/Makefile])
AC_CONFIG_FILES([makevec/Makefile])
AC_CONFIG_FILES([makedic/Makefile])

AC_OUTPUT

